--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "serve-favicon": "~2.4.5",
-    "style-loader": "^0.21.0"
+    "style-loader": "^0.21.0",
+    "underscore": "^1.9.1"
   },
   "devDependencies": {
     "babel": "^6.23.0",
